docs/4.21/backup_and_restore/application_backup_and_restore/release-notes/oadp-1-5-release-notes.md
The release notes for OpenShift API for Data Protection (OADP) 1.5 describe new features and enhancements, deprecated features, product recommendations, known issues, and resolved issues.

<div class="note">

For additional information about OADP, see *OpenShift API for Data Protection (OADP) FAQ*.

</div>

# OADP 1.5.8 release notes

OpenShift API for Data Protection (OADP) 1.5.8 release notes list new features, resolved issues, and known issues.

The following Red Hat Security Advisory (RHSA) is available for OADP 1.5.8:

- [RHSA-2026:66022 - New version of Red Hat OpenShift API for Data Protection](https://access.redhat.com/errata/RHSA-2026:66022)

## New features

OADP CLI plugin
OADP includes a `kubectl` command-line interface (CLI) plugin that provides a `kubectl` native interface for managing backups and restores. Before this update, you aliased to the Velero CLI to perform backup operations. Non-cluster administrators had no way to independently manage their own backups, creating a dependency on cluster admins for routine data protection tasks. As a result, admins can run `kubectl oadp` or `oc oadp` commands to create, delete, and retrieve logs for backups and restores. Non-cluster admins can run the `oc oadp nonadmin` command to independently create, delete, and inspect non-admin backups within their permitted namespaces.

[OADP-8075](https://redhat.atlassian.net/browse/OADP-8075)

## Resolved issues

Restored pods no longer fail to connect because of retained OVN network annotations
Before this update, Velero restored pods with the `k8s.ovn.org/pod-networks` annotation preserved from the source cluster. As a consequence, OVN-Kubernetes skipped allocating new network configurations, resulting in stale IP assignments, subnet mismatches, and lost network connectivity for restored pods. With this release, the `k8s.ovn.org/pod-networks` annotation is automatically stripped during restore operations. As a result, OVN-Kubernetes successfully re-allocates fresh logical ports and IP addresses to restored pods, ensuring proper network connectivity.

[OADP-7560](https://redhat.atlassian.net/browse/OADP-7560)

DPA reconciliation no longer fails when credentials are defined only in `CloudStorage`
Before this update, the `DataProtectionApplication` (DPA) reconciliation required credentials to be explicitly specified in the DPA custom resource (CR) even when the credentials were provided in the `CloudStorage` CR. With this release, the DPA controller inherits credentials, configuration values, and region settings from the referenced `CloudStorage` CR when using `backupLocations.bucket.cloudStorageRef`. If both DPA-level and `CloudStorage`-level values are provided, DPA-level values take precedence. As a result, DPA reconciliation no longer fails due to missing credentials in DPA CR.

[OADP-6669](https://redhat.atlassian.net/browse/OADP-6669)

Backup hooks are no longer skipped on dynamically injected pods when using `labelSelector`
Before this update, Velero evaluated backup hooks by using the backup’s top-level label selector. As a consequence, pods dynamically added to a backup by plugins by using `AdditionalItems` were skipped during hook execution if they did not directly match `labelSelector`. This resulted in crash-consistent or potentially corrupt backups. With this release, plugin adjustments ensure that dynamic pod items properly call configured pre- and post-backup hooks regardless of whether the pod itself carries the primary backup label. As a result, dynamically included pods run backup hooks as expected.

[OADP-8332](https://redhat.atlassian.net/browse/OADP-8332)

OADP workload pods use dedicated service accounts
Before this update, the `oadp-cli-server` workload pods in the `openshift-adp` namespace used the default service account instead of dedicated, workload-specific service accounts. As a consequence, access control validation checks failed during deployment verification. With this release, dedicated and valid service accounts are properly assigned to these workload pods. As a result, all OADP workload pods comply with access control verification and adhere to cluster security standards.

[OADP-8454](https://redhat.atlassian.net/browse/OADP-8454)

OADP CLI server pod uses a dedicated service account with no cross-namespace `RoleBindings`
Before this update, the `oadp-cli-server` pod was deployed with an empty or default `serviceAccountName` without properly scoped role bindings. As a consequence, role bindings used by a pod did not reside within the same workload namespace. With this release, the OADP Operator creates a dedicated `openshift-adp-cli-server` service account with `automountServiceAccountToken: false` and no cross-namespace `RoleBindings`. As a result, the OADP CLI server pod runs with a correctly scoped, least-privilege service account in the `openshift-adp` namespace.

[OADP-8455](https://redhat.atlassian.net/browse/OADP-8455)

`NetworkAttachmentDefinitions` are backed up as part of VM backups
Before this update, when backing up a virtual machine (VM) with an attached `NetworkAttachmentDefinition` (NAD), the NAD was not included in the backup. With this release, the Velero `kubevirt` plugin includes NADs in the resource graph (`KVGraph`) for VM backups. It also correctly updates the namespace references inside the NAD configuration during alternate-namespace restores. As a result, backing up a VM successfully backs up all attached NADs.

[OADP-8462](https://redhat.atlassian.net/browse/OADP-8462)

OADP containers include liveness, readiness, and startup probes
Before this update, the OADP command-line interface (CLI) container did not have configured Kubernetes health probes (liveness, readiness, and startup probes). As a consequence, workloads could not automatically recover from common failures, such as pod, host, or network issues. With this release, the OADP Operator adds liveness, readiness, and startup probes to the deployed containers. As a result, workloads can use native Kubernetes health-checking mechanisms to self-recover from failures and ensure reliable application traffic routing.

[OADP-8486](https://redhat.atlassian.net/browse/OADP-8486)

## Known issues

`CloudStorage` bucket creation fails on Google Cloud with WIF authentication
When you configure `CloudStorage` on OpenShift clusters on Google Cloud by using Workload Identity Federation (WIF) authentication, the `CloudStorage` resource fails to detect that a Google Cloud bucket does not exist. As a consequence, the resource returns a `BucketCheckError` condition and prevents automatic bucket creation.

To work around this problem, use an existing Google Cloud bucket. As a result, the controller skips bucket creation and proceeds with the existing bucket for backup storage.

[OADP-8786](https://redhat.atlassian.net/browse/OADP-8786)

# OADP 1.5.7 release notes

OpenShift API for Data Protection (OADP) 1.5.7 release notes list resolved issues.

<div class="note">

There is no OADP 1.5.6 release. The version numbering skips from 1.5.5 to 1.5.7 due to an internal process reason.

</div>

## Resolved issues

OADP 1.5.7 fixes the following CVEs
- [CVE-2026-25679](https://access.redhat.com/security/cve/cve-2026-25679)

- [CVE-2026-27137](https://access.redhat.com/security/cve/cve-2026-27137)

- [CVE-2026-32280](https://access.redhat.com/security/cve/cve-2026-32280)

- [CVE-2026-32281](https://access.redhat.com/security/cve/cve-2026-32281)

- [CVE-2026-32282](https://access.redhat.com/security/cve/cve-2026-32282)

- [CVE-2026-33186](https://access.redhat.com/security/cve/cve-2026-33186)

- [CVE-2026-33747](https://access.redhat.com/security/cve/cve-2026-33747)

- [CVE-2026-33748](https://access.redhat.com/security/cve/cve-2026-33748)

- [CVE-2026-33810](https://access.redhat.com/security/cve/cve-2026-33810)

- [CVE-2026-34986](https://access.redhat.com/security/cve/cve-2026-34986)

DPA no longer reports an error when the `podConfig` value is empty and `nodeAgent` affinity is specified
Before this update, the `DataProtectionApplication` (DPA) custom resource reported an error due to an empty `podConfig` with specified `nodeAgent` affinity. This caused DPA to fail to reconcile. With this release, DPA reports an error only when `nodeAgent.podConfig.nodeSelector` does not match `spec.configuration.nodeAgent.LoadAffinityConfig` when `podConfig` is explicitly set.

[OADP-7017](https://issues.redhat.com/browse/OADP-7017)

Backup deletion no longer hangs when CSI snapshots are missing
Before this update, the Velero `DeleteBackupRequest` queue got stuck when attempting to delete backups that referenced non-existent Amazon Web Services (AWS) EBS snapshots. This occurred after removing schedules in the granular schedules-per-hosted-cluster model. With this release, backup deletion handles missing CSI snapshots correctly and completes without getting stuck.

[OADP-7537](https://issues.redhat.com/browse/OADP-7537)

Windows VM backups no longer fail with `QuiesceFailed` errors
Before this update, Windows virtual machine (VM) snapshot operations failed because the guest agent became unresponsive during the freeze operation, causing `QuiesceFailed` errors. With this release, CSI snapshot early frequent polling is enabled for all snapshots, which resolves the timing issue with the guest agent during the freeze operation.

[OADP-7543](https://issues.redhat.com/browse/OADP-7543)

Wildcard handling for `excludedClusterScopedResources` no longer causes validation failures
Before this update, the OADP Operator incorrectly appended default resources to `excludedClusterScopedResources` in the `NonAdminBackup` CR when a wildcard (`*`) was present. This caused `FailedValidation` errors when excluding all cluster-scoped resources. With this release, the Operator correctly handles the wildcard without appending default resources.

[OADP-7562](https://issues.redhat.com/browse/OADP-7562)

CSI snapshot early frequent polling is configurable in the `DataProtectionApplication` CR
With this release, you can disable or configure the Container Storage Interface (CSI) snapshot early frequent polling interval in the OADP `DataProtectionApplication` (DPA) custom resource (CR). This allows you to tune snapshot polling behavior to better suit your environment.

[OADP-7883](https://issues.redhat.com/browse/OADP-7883)

# OADP 1.5.5 release notes

OpenShift API for Data Protection (OADP) 1.5.5 release notes list resolved issues.

## Resolved issues

OADP 1.5.5 fixes the following CVEs
- [CVE-2025-61726](https://access.redhat.com/security/cve/cve-2025-61726)

- [CVE-2025-61728](https://access.redhat.com/security/cve/cve-2025-61728)

- [CVE-2025-68121](https://access.redhat.com/security/cve/cve-2025-68121)

Single-node OpenShift clusters no longer crash due to premature CRD sync before API initialization
Before this update, the controller crashed during image-based upgrade (IBU) due to missing OpenShift Container Platform custom resource definitions (CRDs) before they were fully initialized. As a consequence, this failure delayed `DataProtectionApplication` (DPA) reconciliation during IBU upgrade by 8 minutes. This release resolves this issue by requiring the controller to wait for OpenShift Container Platform CRDs to load before starting in the IBU environment on single-node OpenShift, while also disabling leader election. This change shortens the DPA reconciliation window and improves the overall upgrade duration for single-node OpenShift clusters.

[OADP-7508](https://issues.redhat.com/browse/OADP-7508)

# OADP 1.5.4 release notes

OpenShift API for Data Protection (OADP) 1.5.4 is a Container Grade Only (CGO) release, which is released to refresh the health grades of the containers. No code was changed in the product itself compared to that of OADP 1.5.3. OADP 1.5.4 introduces a known issue and fixes several Common Vulnerabilities and Exposures (CVEs).

## Known issues

Simultaneous updates to the same `NonAdminBackupStorageLocationRequest` objects cause resource conflicts
Simultaneous updates by several controllers or processes to the same `NonAdminBackupStorageLocationRequest` objects cause resource conflicts during backup creation in OADP self-service. As a consequence, reconciliation attempts fail with `object has been modified` errors. No known workaround exists.

[OADP-6700](https://issues.redhat.com/browse/OADP-6700)

## Resolved issues

OADP 1.5.4 fixes the following CVEs
- [CVE-2025-61729](https://access.redhat.com/security/cve/cve-2025-61729)

- [CVE-2025-52881](https://access.redhat.com/security/cve/cve-2025-52881)

- [CVE-2024-25621](https://access.redhat.com/security/cve/cve-2024-25621)

- [CVE-2025-58183](https://access.redhat.com/security/cve/cve-2025-58183)

# OADP 1.5.3 release notes

OpenShift API for Data Protection (OADP) 1.5.3 is a Container Grade Only (CGO) release, which is released to refresh the health grades of the containers. No code was changed in the product itself compared to that of OADP 1.5.2.

# OADP 1.5.2 release notes

The OpenShift API for Data Protection (OADP) 1.5.2 release notes list resolved issues.

## Resolved issues

Self-signed certificate for internal image backup should not break other BSLs
Before this update, OADP would only process the first custom CA certificate found among all backup storage locations (BSLs) and apply it globally. This behavior prevented multiple BSLs with different CA certificates from working correctly. Additionally, system-trusted certificates were not included, causing failures when connecting to standard services.

With this update, OADP now:

- Concatenates all unique CA certificates from AWS BSLs into a single bundle.

- Includes system-trusted certificates automatically.

- Enables multiple BSLs with different custom CA certificates to operate simultaneously.

- Only processes CA certificates when image backup is enabled (default behavior).

This enhancement improves compatibility for environments using multiple storage providers with different certificate requirements, particularly when backing up internal images to AWS S3-compatible storage with self-signed certificates.

[OADP-6765](https://issues.redhat.com/browse/OADP-6765)

# OADP 1.5.1 release notes

The OpenShift API for Data Protection (OADP) 1.5.1 release notes list new features, resolved issues, known issues, and deprecated features.

## New features

`CloudStorage` API is fully supported
The `CloudStorage` API feature, available as a Technology Preview before this update, is fully supported from OADP 1.5.1. The `CloudStorage` API automates the creation of a bucket for object storage.

[OADP-3307](https://issues.redhat.com/browse/OADP-3307)

New `DataProtectionTest` custom resource is available
The `DataProtectionTest` (DPT) is a custom resource (CR) that provides a framework to validate your OADP configuration.

The DPT CR checks and reports information for the following parameters:

- The upload performance of the backups to the object storage.

- The Container Storage Interface (CSI) snapshot readiness for persistent volume claims.

- The storage bucket configuration, such as encryption and versioning.

Using this information in the DPT CR, you can ensure that your data protection environment is properly configured and performing according to the set configuration.

Note that you must configure `STORAGE_ACCOUNT_ID` when using DPT with OADP on Azure.

[OADP-6300](https://issues.redhat.com/browse/OADP-6300)

New node agent load affinity configurations are available
- **Node agent load affinity:** You can schedule the node agent pods on specific nodes by using the `spec.podConfig.nodeSelector` object of the `DataProtectionApplication` (DPA) custom resource (CR). You can add more restrictions on the node agent pods scheduling by using the `nodeagent.loadAffinity` object in the DPA spec.

- **Repository maintenance job affinity configurations:** You can use the repository maintenance job affinity configurations in the `DataProtectionApplication` (DPA) custom resource (CR) only if you use Kopia as the backup repository.

  You have the option to configure the load affinity at the global level affecting all repositories, or for each repository. You can also use a combination of global and per-repository configuration.

- **Velero load affinity:** You can use the `podConfig.nodeSelector` object to assign the Velero pod to specific nodes. You can also configure the `velero.loadAffinity` object for pod-level affinity and anti-affinity.

[OADP-5832](https://issues.redhat.com/browse/OADP-5832)

Node agent load concurrency is available
With this update, users can control the maximum number of node agent operations that can run simultaneously on each node within their cluster. It also enables better resource management, optimizing backup and restore workflows for improved performance and a more streamlined experience.

## Resolved issues

`DataProtectionApplicationSpec` overflowed annotation limit, causing potential misconfiguration in deployments
Before this update, the `DataProtectionApplicationSpec` used deprecated `PodAnnotations`, which led to an annotation limit overflow. This caused potential misconfigurations in deployments. In this release, we have added `PodConfig` for annotations in pods deployed by the Operator, ensuring consistent annotations and improved manageability for end users. As a result, deployments should now be more reliable and easier to manage.

[OADP-6454](https://issues.redhat.com/browse/OADP-6454)

Root file system for OADP controller manager is now read-only
Before this update, the `manager` container of the `openshift-adp-controller-manager-*` pod was configured to run with a writable root file system. As a consequence, this could allow for tampering with the container’s file system or the writing of foreign executables. With this release, the container’s security context has been updated to set the root file system to read-only while ensuring necessary functions that require write access, such as the Kopia cache, continue to operate correctly. As a result, the container is hardened against potential threats.

`nonAdmin.enable: false` in multiple DPAs no longer causes reconcile issues
Before this update, when a user attempted to create a second non-admin `DataProtectionApplication` (DPA) on a cluster where one already existed, the new DPA failed to reconcile. With this release, the restriction on Non-Admin Controller installation to one per cluster has been removed. As a result, users can install multiple Non-Admin Controllers across the cluster without encountering errors.

[OADP-6500](https://issues.redhat.com/browse/OADP-6500)

OADP supports self-signed certificates
Before this update, using a self-signed certificate for backup images with a storage provider such as Minio resulted in an `x509: certificate signed by unknown authority` error during the backup process. With this release, certificate validation has been updated to support self-signed certificates in OADP, ensuring successful backups.

[OADP-641](https://issues.redhat.com/browse/OADP-641)

`velero describe` includes `defaultVolumesToFsBackup`
Before this update, the `velero describe` output command omitted the `defaultVolumesToFsBackup` flag. This affected the visibility of backup configuration details for users. With this release, the `velero describe` output includes the `defaultVolumesToFsBackup` flag information, improving the visibility of backup settings.

[OADP-5762](https://issues.redhat.com/browse/OADP-5762)

DPT CR no longer fail when `s3Url` is secured
Before this update, `DataProtectionTest` (DPT) failed to run when `s3Url` was secured due to an unverified certificate because the DPT CR lacked the ability to skip or add the caCert in the spec field. As a consequence, data upload failure occurred due to an unverified certificate. With this release, DPT CR has been updated to accept and skip CA cert in spec field, resolving SSL verification errors. As a result, DPT no longer fails when using secured `s3Url`.

[OADP-6235](https://issues.redhat.com/browse/OADP-6235)

Adding a backupLocation to DPA with an existing backupLocation name is not rejected
Before this update, adding a second `backupLocation` with the same name in `DataProtectionApplication` (DPA) caused OADP to enter an invalid state, leading to Backup and Restore failures due to Velero’s inability to read Secret credentials. As a consequence, Backup and Restore operations failed. With this release, the duplicate `backupLocation` names in DPA are no longer allowed, preventing Backup and Restore failures. As a result, duplicate `backupLocation` names are rejected, ensuring seamless data protection.

[OADP-6459](https://issues.redhat.com/browse/OADP-6459)

## Known issues

The restore fails for backups created on OpenStack using the Cinder CSI driver
When you start a restore operation for a backup that was created on an OpenStack platform using the Cinder Container Storage Interface (CSI) driver, the initial backup only succeeds after the source application is manually scaled down. The restore job fails, preventing you from successfully recovering your application’s data and state from the backup. No known workaround exists.

[OADP-5552](https://issues.redhat.com/browse/OADP-5552)

Datamover pods scheduled on unexpected nodes during backup if the `nodeAgent.loadAffinity` parameter has many elements
Due to an issue in Velero 1.14 and later, the OADP node-agent only processes the first `nodeSelector` element within the `loadAffinity` array. As a consequence, if you define multiple `nodeSelector` objects, all objects except the first are ignored, potentially causing datamover pods to be scheduled on unexpected nodes during a backup.

To work around this problem, consolidate all required `matchExpressions` from multiple `nodeSelector` objects into the first `nodeSelector` object. As a result, all node affinity rules are correctly applied, ensuring datamover pods are scheduled to the appropriate nodes.

[OADP-6469](https://issues.redhat.com/browse/OADP-6469)

OADP Backup fails when using CA certificates with aliased command
The CA certificate is not stored as a file on the running Velero container. As a consequence, the user experience degraded due to missing `caCert` in Velero container, requiring manual setup and downloads. To work around this problem, manually add cert to the Velero deployment. For instructions, see [Using cacert with velero command aliased via velero deployment](https://access.redhat.com/articles/5456281#using-cacert-with-velero-command-aliased-via-velero-deployment-48).

[OADP-4668](https://issues.redhat.com/browse/OADP-4668)

The `nodeSelector` spec is not supported for the Data Mover restore action
When a Data Protection Application (DPA) is created with the `nodeSelector` field set in the `nodeAgent` parameter, Data Mover restore partially fails instead of completing the restore operation. No known workaround exists.

[OADP-4743](https://issues.redhat.com/browse/OADP-4743)

Image streams backups are partially failing when the DPA is configured with `caCert`
An unverified certificate in the S3 connection during backups with `caCert` in `DataProtectionApplication` (DPA) causes the `ocp-django` application’s backup to partially fail and result in data loss. No known workaround exists.

[OADP-4817](https://issues.redhat.com/browse/OADP-4817)

Kopia does not delete cache on worker node
When the `ephemeral-storage` parameter is configured and running file system restore, the cache is not automatically deleted from the worker node. As a consequence, the `/var` partition overflows during backup restore, causing increased storage usage and potential resource exhaustion. To work around this problem, restart the node agent pod, which clears the cache. As a result, cache is deleted.

[OADP-4855](https://issues.redhat.com/browse/OADP-4855)

Google Cloud VSL backups fail with Workload Identity because of invalid project configuration
When performing a `volumeSnapshotLocation` (VSL) backup on Google Cloud Workload Identity, the Velero Google Cloud plugin creates an invalid API request if the Google Cloud project is also specified in the `snapshotLocations` configuration of `DataProtectionApplication` (DPA). As a consequence, the Google Cloud API returns a `RESOURCE_PROJECT_INVALID` error, and the backup job finishes with a `PartiallyFailed` status. No known workaround exists.

[OADP-6697](https://issues.redhat.com/browse/OADP-6697)

VSL backups fail for `CloudStorage` API on AWS with STS
The `volumeSnapshotLocation` (VSL) backup fails because of missing the `AZURE_RESOURCE_GROUP` parameter in the credentials file, even if `AZURE_RESOURCE_GROUP` is already mentioned in the `DataProtectionApplication` (DPA) config for VSL. No known workaround exists.

[OADP-6676](https://issues.redhat.com/browse/OADP-6676)

Backups of applications with `ImageStreams` fail on Azure with STS
When backing up applications that include image stream resources on an Azure cluster using STS, the OADP plugin incorrectly attempts to locate a secret-based credential for the container registry. As a consequence, the required secret is not found in the STS environment, causing the `ImageStream` custom backup action to fail. This results in the overall backup status marked as `PartiallyFailed`. No known workaround exists.

[OADP-6675](https://issues.redhat.com/browse/OADP-6675)

DPA reconciliation fails for `CloudStorageRef` configuration
When a user creates a bucket and uses the `backupLocations.bucket.cloudStorageRef` configuration, bucket credentials are not present in the `DataProtectionApplication` (DPA) custom resource (CR). As a result, the DPA reconciliation fails even if bucket credentials are present in the `CloudStorage` CR. To work around this problem, add the same credentials to the `backupLocations` section of the DPA CR.

[OADP-6669](https://issues.redhat.com/browse/OADP-6669)

## Deprecated features

The `configuration.restic` specification field has been deprecated
With OADP 1.5.0, the `configuration.restic` specification field has been deprecated. Use the `nodeAgent` section with the `uploaderType` field for selecting `kopia` or `restic` as a `uploaderType`. Note that Restic is deprecated in OADP 1.5.0.

[OADP-5158](https://issues.redhat.com/browse/OADP-5158)

# OADP 1.5.0 release notes

The OpenShift API for Data Protection (OADP) 1.5.0 release notes list new features, resolved issues, known issues, deprecated features, and Technology Preview features.

## New features

OADP 1.5.0 introduces a new Self-Service feature
OADP 1.5.0 introduces a new feature named OADP Self-Service, enabling namespace admin users to back up and restore applications on the OpenShift Container Platform. In the earlier versions of OADP, you needed the cluster-admin role to perform OADP operations such as backing up and restoring an application, creating a backup storage location, and so on.

From OADP 1.5.0 onward, you do not need the cluster-admin role to perform the backup and restore operations. You can use OADP with the namespace admin role. The namespace admin role has administrator access only to the namespace the user is assigned to. You can use the Self-Service feature only after the cluster administrator installs the OADP Operator and provides the necessary permissions.

[OADP-4001](https://issues.redhat.com/browse/OADP-4001)

Collecting logs with the `must-gather` tool has been improved with a Markdown summary
You can collect logs, and information about OpenShift API for Data Protection (OADP) custom resources by using the `must-gather` tool. The `must-gather` data must be attached to all customer cases. This tool generates a Markdown output file with the collected information, which is located in the `must-gather` logs clusters directory.

[OADP-5384](https://issues.redhat.com/browse/OADP-5384)

`dataMoverPrepareTimeout` and `resourceTimeout` parameters are now added to `nodeAgent` within the DPA
The `nodeAgent` field in Data Protection Application (DPA) now includes the following parameters:

- `dataMoverPrepareTimeout`: Defines the duration the `DataUpload` or `DataDownload` process will wait. The default value is 30 minutes.

- `resourceTimeout`: Sets the timeout for resource processes not addressed by other specific timeout parameters. The default value is 10 minutes.

[OADP-3736](https://issues.redhat.com/browse/OADP-3736)

Use the `spec.configuration.nodeAgent` parameter in DPA for configuring `nodeAgent` daemon set
Velero no longer uses the `node-agent-config` config map for configuring the `nodeAgent` daemon set. With this update, you must use the new `spec.configuration.nodeAgent` parameter in a Data Protection Application (DPA) for configuring the `nodeAgent` daemon set.

[OADP-5042](https://issues.redhat.com/browse/OADP-5042)

Configuring DPA with the backup repository configuration config map is now possible
With Velero 1.15 and later, you can now configure the total size of a cache per repository. This prevents pods from being removed due to running out of ephemeral storage. See the following new parameters added to the `NodeAgentConfig` field in DPA:

- `cacheLimitMB`: Sets the local data cache size limit in megabytes.

- `fullMaintenanceInterval`: The default value is 24 hours. Controls the removal rate of deleted Velero backups from the Kopia repository using the following override options:

  - `normalGC: 24 hours`

  - `fastGC: 12 hours`

  - `eagerGC: 6 hours`

[OADP-5900](https://issues.redhat.com/browse/OADP-5900)

Enhancing the node-agent security
With this update, the following changes are added:

- A new `configuration` option is now added to the `velero` field in DPA.

- The default value for the `disableFsBackup` parameter is `false` or `non-existing`. With this update, the following options are added to the `SecurityContext` field:

  - `Privileged: true`

  - `AllowPrivilegeEscalation: true`

- If you set the `disableFsBackup` parameter to `true`, it removes the following mounts from the node-agent:

  - `host-pods`

  - `host-plugins`

- Modifies that the node-agent is always run as a non-root user.

- Changes the root file system to read only.

- Updates the following mount points with the write access:

  - `/home/velero`

  - `tmp/credentials`

- Uses the `SeccompProfileTypeRuntimeDefault` option for the `SeccompProfile` parameter.

[OADP-5031](https://issues.redhat.com/browse/OADP-5031)

Adds DPA support for parallel item backup
By default, only one thread processes an item block. Velero 1.16 supports a parallel item backup, where multiple items within a backup can be processed in parallel.

You can use the optional Velero server parameter `--item-block-worker-count` to run additional worker threads to process items in parallel. To enable this in OADP, set the `dpa.Spec.Configuration.Velero.ItemBlockWorkerCount` parameter to an integer value greater than zero.

<div class="note">

Running multiple full backups in parallel is not yet supported.

</div>

[OADP-5635](https://issues.redhat.com/browse/OADP-5635)

OADP logs are now available in the JSON format
With the of release OADP 1.5.0, the logs are now available in the JSON format. It helps to have pre-parsed data in their Elastic logs management system.

[OADP-3391](https://issues.redhat.com/browse/OADP-3391)

The `oc get dpa` command now displays `RECONCILED` status
With this release, the `oc get dpa` command now displays `RECONCILED` status instead of displaying only `NAME` and `AGE` to improve user experience. For example:

``` terminal
$ oc get dpa -n openshift-adp
NAME            RECONCILED   AGE
velero-sample   True         2m51s
```

[OADP-1338](https://issues.redhat.com/browse/OADP-1338)

## Resolved issues

Containers now use `FallbackToLogsOnError` for `terminationMessagePolicy`
With this release, the `terminationMessagePolicy` field can now set the `FallbackToLogsOnError` value for the OpenShift API for Data Protection (OADP) Operator containers such as `operator-manager`, `velero`, `node-agent`, and `non-admin-controller`.

This change ensures that if a container exits with an error and the termination message file is empty, OpenShift uses the last portion of the container logs output as the termination message.

[OADP-5183](https://issues.redhat.com/browse/OADP-5183)

Namespace admin can now access the application after restore
Previously, the namespace admin could not execute an application after the restore operation.

The execution failed with the following errors:

- `exec operation is not allowed because the pod’s security context exceeds your permissions`

- `unable to validate against any security context constraint`

- `not usable by user or serviceaccount, provider restricted-v2`

With this update, this issue is now resolved and the namespace admin can access the application successfully after the restore.

[OADP-5611](https://issues.redhat.com/browse/OADP-5611)

Specifying status restoration at the individual resource instance level using the annotation is now possible
Previously, status restoration was only configured at the resource type using the `restoreStatus` field in the `Restore` custom resource (CR).

With this release, you can now specify the status restoration at the individual resource instance level using the following annotation:

``` terminal
metadata:
  annotations:
    velero.io/restore-status: "true"
```

[OADP-5968](https://issues.redhat.com/browse/OADP-5968)

Restore is now successful with `excludedClusterScopedResources`
Previously, on performing the backup of an application with the `excludedClusterScopedResources` field set to `storageclasses`, `Namespace` parameter, the backup was successful but the restore partially failed. With this update, the restore is successful.

[OADP-5239](https://issues.redhat.com/browse/OADP-5239)

Backup is completed even if it gets restarted during the `waitingForPluginOperations` phase
Previously, a backup was marked as failed with the following error message:

    failureReason: found a backup with status "InProgress" during the server starting,
    mark it as "Failed"

With this update, the backup is completed if it gets restarted during the `waitingForPluginOperations` phase.

[OADP-2941](https://issues.redhat.com/browse/OADP-2941)

Error messages are now more informative when the\` disableFsbackup\` parameter is set to `true` in DPA
Previously, when the `spec.configuration.velero.disableFsBackup` field from a Data Protection Application (DPA) was set to `true`, the backup partially failed with an error, which was not informative.

This update makes error messages more useful for troubleshooting issues. For example, error messages indicating that `disableFsBackup: true` is the issue in a DPA or not having access to a DPA if it is for non-administrator users.

[OADP-5952](https://issues.redhat.com/browse/OADP-5952)

Handles AWS STS credentials in the parseAWSSecret
Previously, AWS credentials using STS authentication were not properly validated.

With this update, the `parseAWSSecret` function detects STS-specific fields, and updates the `ensureSecretDataExists` function to handle STS profiles correctly.

[OADP-6105](https://issues.redhat.com/browse/OADP-6105)

The `repositoryMaintenance` job affinity config is available to configure
Previously, the new configurations for repository maintenance job pod affinity was missing from a DPA specification.

With this update, the `repositoryMaintenance` job affinity config is now available to map a `BackupRepository` identifier to its configuration.

[OADP-6134](https://issues.redhat.com/browse/OADP-6134)

The `ValidationErrors` field fades away once the CR specification is correct
Previously, when a schedule CR was created with a wrong `spec.schedule` value and the same was later patched with a correct value, the `ValidationErrors` field still existed. Consequently, the `ValidationErrors` field was displaying incorrect information even though the spec was correct.

With this update, the `ValidationErrors` field fades away once the CR specification is correct.

[OADP-5419](https://issues.redhat.com/browse/OADP-5419)

The `volumeSnapshotContents` custom resources are restored when the `includedNamesapces` field is used in `restoreSpec`
Previously, when a restore operation was triggered with the `includedNamespace` field in a restore specification, restore operation was completed successfully but no `volumeSnapshotContents` custom resources (CR) were created and the PVCs were in a `Pending` status.

With this update, `volumeSnapshotContents` CR are restored even when the `includedNamesapces` field is used in `restoreSpec`. As a result, an application pod is in a `Running` state after restore.

[OADP-5939](https://issues.redhat.com/browse/OADP-5939)

OADP operator successfully creates bucket on top of AWS
Previously, the container was configured with the `readOnlyRootFilesystem: true` setting for security, but the code attempted to create temporary files in the `/tmp` directory using the `os.CreateTemp()` function. Consequently, while using the AWS STS authentication with the Cloud Credential Operator (CCO) flow, OADP failed to create temporary files that were required for AWS credential handling with the following error:

``` terminal
ERROR unable to determine if bucket exists. {"error": "open /tmp/aws-shared-credentials1211864681: read-only file system"}
```

With this update, the following changes are added to address this issue:

- A new `emptyDir` volume named `tmp-dir` to the controller pod specification.

- A volume mount to the container, which mounts this volume to the `/tmp` directory.

- For security best practices, the `readOnlyRootFilesystem: true` is maintained.

- Replaced the deprecated `ioutil.TempFile()` function with the recommended `os.CreateTemp()` function.

- Removed the unnecessary `io/ioutil` import, which is no longer needed.

[OADP-6019](https://issues.redhat.com/browse/OADP-6019)

For a complete list of all issues resolved in this release, see the list of [OADP 1.5.0 resolved issues](https://issues.redhat.com/issues/?filter=12462673) in Jira.

## Known issues

Kopia does not delete all the artifacts after backup expiration
Even after deleting a backup, Kopia does not delete the volume artifacts from the `${bucket_name}/kopia/${namespace}` on the S3 location after the backup expired. Information related to the expired and removed data files remains in the metadata.

To ensure that OpenShift API for Data Protection (OADP) functions properly, the data is not deleted, and it exists in the `/kopia/` directory, for example:

- `kopia.repository`: Main repository format information such as encryption, version, and other details.

- `kopia.blobcfg`: Configuration for how data blobs are named.

- `kopia.maintenance`: Tracks maintenance owner, schedule, and last successful build.

- `log`: Log blobs.

[OADP-5131](https://issues.redhat.com/browse/OADP-5131)

For a complete list of all known issues in this release, see the list of [OADP 1.5.0 known issues](https://issues.redhat.com/issues/?filter=12472334) in Jira.

## Deprecated features

The `configuration.restic` specification field has been deprecated
With OpenShift API for Data Protection (OADP) 1.5.0, the `configuration.restic` specification field has been deprecated. Use the `nodeAgent` section with the `uploaderType` field for selecting `kopia` or `restic` as a `uploaderType`. Note that Restic is deprecated in OpenShift API for Data Protection (OADP) 1.5.0.

[OADP-5158](https://issues.redhat.com/browse/OADP-5158)

## Technology Preview features

Support for HyperShift hosted OpenShift clusters is available as a Technology Preview
OADP can support and facilitate application migrations within HyperShift hosted OpenShift clusters as a Technology Preview. It ensures a seamless backup and restore operation for applications in hosted clusters.

For more information about the support scope of Red Hat Technology Preview features, see [Technology Preview Features Support Scope](https://access.redhat.com/support/offerings/techpreview/).

[OADP-3930](https://issues.redhat.com/browse/OADP-3930)

# Additional resources

- [OpenShift API for Data Protection (OADP) FAQ](https://access.redhat.com/articles/5456281)
